Fix issue of text jumping when aligning it

--- a/js/src/components/Controls/TextAlign/Component/styles.css
+++ b/js/src/components/Controls/TextAlign/Component/styles.css
@@ -25,14 +25,14 @@
   text-align: justify;
 }
 .rdw-right-aligned-block > div {
-  display: inline;
+  display: inline-block;
 }
 .rdw-left-aligned-block > div {
-  display: inline;
+  display: inline-block;
 }
 .rdw-center-aligned-block > div {
-  display: inline;
+  display: inline-block;
 }
 .rdw-justify-aligned-block > div {
-  display: inline;
+  display: inline-block;
 }
